workspace/log/build_2024-12-07_16-53-24/template_drone_control/stderr.log
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In constructor ‘MultiDroneControl::MultiDroneControl()’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:90:14: warning: structured bindings only available with ‘-std=c++17’ or ‘-std=gnu++17’
   90 |         auto [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1);
      |              ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:102:10: warning: left operand of comma operator has no effect [-Wunused-value]
  102 |         {coordsDrone2, coordsDrone3} = calculateFollowerPositions(coordsDrone1);
      |          ^~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:102:36: error: expected ‘;’ before ‘}’ token
  102 |         {coordsDrone2, coordsDrone3} = calculateFollowerPositions(coordsDrone1);
      |                                    ^
      |                                    ;
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:102:24: warning: right operand of comma operator has no effect [-Wunused-value]
  102 |         {coordsDrone2, coordsDrone3} = calculateFollowerPositions(coordsDrone1);
      |                        ^~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:102:38: error: expected primary-expression before ‘=’ token
  102 |         {coordsDrone2, coordsDrone3} = calculateFollowerPositions(coordsDrone1);
      |                                      ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:65:16: warning: unused variable ‘droneCoords’ [-Wunused-variable]
   65 |         Coords droneCoords;
      |                ^~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘std::pair<MultiDroneControl::Coords, MultiDroneControl::Coords> MultiDroneControl::calculateFollowerPositions(const MultiDroneControl::Coords&)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:181:16: warning: unused variable ‘angleRad’ [-Wunused-variable]
  181 |         double angleRad = angle * M_PI / 180.0;
      |                ^~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘MultiDroneControl::Coords MultiDroneControl::get_coords(const string&)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:259:13: warning: unused variable ‘i’ [-Wunused-variable]
  259 |         int i = 0;
      |             ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:257:42: warning: unused parameter ‘ns’ [-Wunused-parameter]
  257 |     Coords get_coords(const std::string &ns){
      |                       ~~~~~~~~~~~~~~~~~~~^~
make[2]: *** [CMakeFiles/swaarm_control.dir/build.make:63: CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/swaarm_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
